--- a/app/templates/report.html
+++ b/app/templates/report.html
@@ -2,11 +2,15 @@
 
 {% block content %}
   <h1>Report Output</h1>
-  {% for notice in notices %}
-    <p>{{ notice.flavor.name }} </p>
-    <p>{{ notice.severity.name }} </p>
-    <p>{{ notice.tag }} </p>
-    <p>{{ notice.explanation }} </p>
-    <br>
-  {% endfor %}
+  {% if not notices %}
+    <p>Our quick check found no accessibility problems, but remember: there is always room for improvement!</p>
+  {% else %}
+    {% for notice in notices %}
+      <p>{{ notice.flavor.name }} </p>
+      <p>{{ notice.severity.name }} </p>
+      <p>{{ notice.tag }} </p>
+      <p>{{ notice.explanation }} </p>
+      <br>
+    {% endfor %}
+  {% endif %}
 {% endblock %}
