Address some accessibility issues

--- a/app/templates/url-input.html
+++ b/app/templates/url-input.html
@@ -4,8 +4,9 @@
   <center>
   <h1>URL Input</h1>
   <form method="POST">
-    <input type="text" name="url">
-    <input type="submit" value="WAQC!">
+    <label for="url to check">URL to check:</label>
+    <input type="url" name="url to check" id="url to check" required aria-required="true">
+    <input type="submit" value="Submit">
   </form>
   </center>
 {% endblock %}
