--- a/app/templates/report.html
+++ b/app/templates/report.html
@@ -6,8 +6,7 @@
     <p>Our quick check found no accessibility problems, but remember: there is always room for improvement!</p>
   {% else %}
     {% for notice in notices %}
-      <p>{{ notice.flavor.name }} </p>
-      <p>{{ notice.severity.name }} </p>
+      <h2>{{ notice.flavor.name }}, {{ notice.severity.name }}</h2>
       <p>{{ notice.tag }} </p>
       <p>{{ notice.explanation }} </p>
       <br>
