added changeable page titles and language tag

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,6 @@
-<html>
+<html lang="en">
   <head>
-    <title>Web Accessibility Quick Check</title>
+    <title>{% block title %}{% endblock %} - Web Accessibility Quick Check</title>
   </head>
   <body>
     <div>
