Prepend http:// to the input URL if the user didn't add it themselves

--- a/app/templates/url-input.html
+++ b/app/templates/url-input.html
@@ -6,7 +6,7 @@
   <h1>URL Input</h1>
   <form method="POST">
     <label for="url to check">URL to check:</label>
-    <input type="url" name="url to check" id="url to check" required aria-required="true">
+    <input name="url to check" id="url to check" required aria-required="true">
     <input type="submit" value="Submit">
   </form>
   </center>
