--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,8 @@
 <html lang="en">
   <head>
     <title>{% block title %}{% endblock %} - Web Accessibility Quick Check</title>
+    <script type="text/javascript"
+      src="{{ url_for('static', filename='js/scripts.js') }}"></script>
   </head>
   <body>
     <div>
