--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,8 @@
 <html>
   <head>
     <title>Web Accessibility Quick Check</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/skeleton.css')}}">
   </head>
   <body>
     <div>
