some styling done

--- a/app/templates/url-input.html
+++ b/app/templates/url-input.html
@@ -2,6 +2,7 @@
 {% block title %}Homepage{% endblock %}
 
 {% block content %}
+<div class="container">
   <center>
   <h1>URL Input</h1>
   <form method="POST">
@@ -10,4 +11,5 @@
     <input type="submit" value="Submit">
   </form>
   </center>
+</div>
 {% endblock %}
