--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css')}}">
   </head>
   <body>
-    <div class="navbar-spacer"></div>
     <nav class="navbar">
       <div class="container">
         <ul class="navbar-list">
@@ -16,6 +15,7 @@
         </ul>
       </div>
     </nav>
+    </div>
     <hr>
     {% block content %}{% endblock %}
   </body>
