being consistent about containers

--- a/app/templates/url-error.html
+++ b/app/templates/url-error.html
@@ -2,9 +2,11 @@
 {% block title %}Error{% endblock %}
 
 {% block content %}
+<div class="container">
   <center>
   <h1>URL Error</h1>
   <p>Something went wrong with the URL that you entered. Please try again!</p>
   <p>The URL you entered was: {{ url }}</p>
   </center>
+</div>
 {% endblock %}
