footer in container

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,12 +15,12 @@
         </ul>
       </div>
     </nav>
-    </div>
-    <hr>
     {% block content %}{% endblock %}
   </body>
-  <footer>
-    <img src="http://carroll.org/wp-content/uploads/2014/08/logo_customizr1.png" alt="Logo for Carroll Center for the Blind" height="100" hspace="100">
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTFKZMbIRnq1p1678_ec3FLBL-80bXHnLnkKO4BAIVcMmwKD-o20Q" alt="Logo for Olin College of Engineering" height="90" hspace="100" align="right">
-  </footer>
+  <div class="container">
+    <footer>
+      <img src="http://carroll.org/wp-content/uploads/2014/08/logo_customizr1.png" alt="Logo for Carroll Center for the Blind" height="100" hspace="100">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTFKZMbIRnq1p1678_ec3FLBL-80bXHnLnkKO4BAIVcMmwKD-o20Q" alt="Logo for Olin College of Engineering" height="90" hspace="100" align="right">
+    </footer>
+  </div>
 </html>
