discovered the header class

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -2,8 +2,10 @@
 {% block title %}About{% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="header">
   <h1>About WAQC</h1>
+</div>
+<div class="container">
   <p>There's nothing here yet!</p>
 </div>
 {% endblock %}
