--- a/app/templates/url-input.html
+++ b/app/templates/url-input.html
@@ -2,9 +2,11 @@
 {% block title %}Homepage{% endblock %}
 
 {% block content %}
+<div class="header">
+  <h1>URL Input</h1>
+</div>
 <div class="container">
   <center>
-  <h1>URL Input</h1>
   <form method="POST">
     <label for="url to check">URL to check:</label>
     <input name="url to check" id="url to check" required aria-required="true">
