framework of an about section

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -6,6 +6,45 @@
   <h1>About WAQC</h1>
 </div>
 <div class="container">
-  <p>There's nothing here yet!</p>
+  <p>Brief project description will be here.</p>
+  <div class="docs-header">
+    <center>
+      <h2>Motivation</h2>
+    </center>
+  </div>
+  <p>
+    We can talk about the importance of an accessible internet, the other freely
+    available accessibility checkers, and other things here.
+  </p>
+  <div class="docs-header">
+    <center>
+      <h2>Process</h2>
+    </center>
+  </div>
+  <h3>What should we make?</h3>
+  <p>
+    Talk about Bruce and his current process (if that's ok with him), what we
+    imagined WAQC might look like, and how we changed our expectations over time
+    with frequent input from Bruce.
+  </p>
+  <h3>How do we make it?</h3>
+  <p>
+    Talk about our development process, the tools we're using, and an overview
+    of how the system works. Link to GitHub for more detailed implementation
+    information.
+  </p>
+  <div class="docs-header">
+    <center>
+      <h2>Our Team</h2>
+    </center>
+  </div>
+  <h3>Developers</h3>
+  <p>Potentially a bad title, but talk about Lisa, Shane, and Louise here.</p>
+  <h3>Partners</h3>
+  <p>
+    Potentially also a bad title, but talk about Bruce/the Carroll Center and
+    Paul and Caitrin/Olin here.
+  </p>
+
 </div>
 {% endblock %}
