link to list of bad labels and URL is caps

--- a/app/templates/url-input.html
+++ b/app/templates/url-input.html
@@ -6,9 +6,9 @@
   <center>
     <h1>URL Input</h1>
   </center>
-  <p>This will check the page at the url submitted below and a randomly selected subpage for the following potential accessibility violations:</p>
+  <p>This will check the page at the URL submitted below and a randomly selected subpage for the following potential accessibility violations:</p>
   <ul>
-    <li>Link labels: We note if a link label matches one of our limited list of not-descriptive potential labels.</li>
+    <li>Link labels: We note if a link label matches an example poor link text from our <a href="https://github.com/tad-web/waqc/blob/master/config/bad_link_labels.txt">list of bad link labels</a>.</li>
     <li>Image alt text: We note if an image has no alt text or if the alt text contains a file extension.</li>
     <li>Header hierarchy: We note if the first header on a page is not an h1 or if header levels are skipped.</li>
   </ul>
