--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -6,32 +6,25 @@
   <h1>About WAQC</h1>
 </div>
 <div class="container">
-  <p>Brief project description will be here.</p>
-  <div class="docs-header">
-    <center>
-      <h2>Motivation</h2>
-    </center>
-  </div>
   <p>
-    We can talk about the importance of an accessible internet, the other freely
-    available accessibility checkers, and other things here.
+    WAQC is a webapp that will check a website for some basic accessibility violations. Unlike many other accessibility checkers, we are built to be accessible and the report we generate is not technical. We built this for and with our community partner from the Carroll Center for the Blind in the context of a project course at Olin College of Engineering.
+  </p>
+  <p>
+    We were motivated to learn about web accessibility and participate in making the internet more accessible for multiple reasons. For one, it is important to know how the world around us treats everyone, including the digital world. This allows us to move forward to create an equal platform for everyone. Secondly, as engineers we spend a lot of time online and potentially will have our work presented in digital space. We wanted to learn how to make our future work more accessible to others. Thirdly, we wanted to create a tool that our community partner could use to assess more websites and broaden his reach. This way, we can hopefully amplify his abilities by allowing him to do more in less time.
+  </p>
+  <p>
+    If you want to help WAQC grow, <a href="https://github.com/tad-web/waqc">check out our source code on Github</a>!
   </p>
   <div class="docs-header">
     <center>
       <h2>Process</h2>
     </center>
   </div>
-  <h3>What should we make?</h3>
   <p>
-    Talk about Bruce and his current process (if that's ok with him), what we
-    imagined WAQC might look like, and how we changed our expectations over time
-    with frequent input from Bruce.
+    We worked closely with Bruce to generate ideas, choose valuable potential violations to check for, and make sure our tool is accessible as we built it. We met weekly and then nearly every other day to run through the current state of the tool and make decisions together for next steps. Because we so closely codesigned this tool with Bruce, many of our decisions are tailored to his specific use case, but we hope WAQC can be useful to others as well. This whole process was completed from March to May of 2018.
   </p>
-  <h3>How do we make it?</h3>
   <p>
-    Talk about our development process, the tools we're using, and an overview
-    of how the system works. Link to GitHub for more detailed implementation
-    information.
+    We created a web application in python using primarily Flask and Jinja2 and hosted it with Heroku. Please <a href="https://github.com/tad-web/waqc">check out our source code on Github</a> for more detailed implementation information and instructions to install and run our project locally.
   </p>
   <div class="docs-header">
     <center>
@@ -39,11 +32,24 @@
     </center>
   </div>
   <h3>Developers</h3>
-  <p>Potentially a bad title, but talk about Lisa, Shane, and Louise here.</p>
+  <p>
+    Note - I'm going to make this much more fun later :) --Louise
+  </p>
+  <p>
+    Lisa studies electrical engineering at Olin College (Class 2018). This may be the last time Lisa touches front end software for a long time, as she normally hides in radio frequencies.
+  </p>
+  <p>
+    Shane is a robotics engineer in Olin College’s class of 2018. He likes the internet and thinks everyone should have access to the things they like.
+  </p>
+  <p>
+    Louise is a junior studying human-centered software engineering. They learned a lot about (accessible) web development in this project and will probably never touch Jinja templates again.
+  </p>
   <h3>Partners</h3>
   <p>
-    Potentially also a bad title, but talk about Bruce/the Carroll Center and
-    Paul and Caitrin/Olin here.
+    For this project, we partnered with Bruce Howell, who is the Accessibility Services Manager for the Carroll Center for the Blind’s Web Accessibility business. He provides evaluations for a company based on their website’s accessibility to people with vision loss. The Carroll Center is passionate about, among other things, providing computer training for all levels, whether it be basic, intensive, for a job or for college, as well as helping companies with websites make their space more accessible. We were lucky to have so much of their time and collaboration in this project and are thankful for the ability to codesign the website with Bruce.
+  </p>
+  <p>
+    This website is the project for our course Technology, Accessibility, Design at Olin College in the Spring 2018 semester. We were supported by our Professors, Caitrin Lynch and Paul Ruvolo. Caitrin is an anthropologist that teaches various humanities courses at Olin College. Paul is a computer scientists who teaches various computer engineering and robotics courses at Olin College. To learn more, see <a href="http://www.olin.edu/faculty/profile/caitrin-lynch/">Caitrin’s biography</a> or <a href="http://www.olin.edu/faculty/profile/paul-ruvolo">Paul’s biography</a> on the Olin website. Together, they collaborated on this course, Technology, Accessibility, Design, first offered in Spring 2018.
   </p>
 
 </div>
