added space for pictures of our faces

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -32,18 +32,28 @@
     </center>
   </div>
   <h3>Developers</h3>
-  <p>
-    Note - I'm going to make this much more fun later :) --Louise
-  </p>
-  <p>
-    Lisa studies electrical engineering at Olin College (Class 2018). This may be the last time Lisa touches front end software for a long time, as she normally hides in radio frequencies.
-  </p>
-  <p>
-    Shane is a robotics engineer in Olin College’s class of 2018. He likes the internet and thinks everyone should have access to the things they like.
-  </p>
-  <p>
-    Louise is a junior studying human-centered software engineering. They learned a lot about (accessible) web development in this project and will probably never touch Jinja templates again.
-  </p>
+  <div>
+    <div class="one-third column">
+      <img class="u-full-width" src="{{ url_for('static', filename='images/ginger.png')}}" alt="Future Lisa's face, currently a gingerbread man">
+      <p>
+        Lisa studies electrical engineering at Olin College (Class 2018). This may be the last time Lisa touches front end software for a long time, as she normally hides in radio frequencies.
+      </p>
+    </div>
+    <div class="one-third column">
+      <img class="u-full-width" src="{{ url_for('static', filename='images/ginger.png')}}" alt="Future Shane's face, currently a gingerbread man">
+      <p>
+        Shane is a robotics engineer in Olin College’s class of 2018. He likes the internet and thinks everyone should have access to the things they like.
+      </p>
+    </div>
+    <div class="one-third column">
+      <img class="u-full-width" src="{{ url_for('static', filename='images/ginger.png')}}" alt="Future Louise's face, currently a gingerbread man">
+    </div>
+    <p>
+      Louise is a junior studying human-centered software engineering. They learned a lot about (accessible) web development in this project and will probably never touch Jinja templates again.
+    </p>
+  </div>
+
+
   <h3>Partners</h3>
   <p>
     For this project, we partnered with Bruce Howell, who is the Accessibility Services Manager for the Carroll Center for the Blind’s Web Accessibility business. He provides evaluations for a company based on their website’s accessibility to people with vision loss. The Carroll Center is passionate about, among other things, providing computer training for all levels, whether it be basic, intensive, for a job or for college, as well as helping companies with websites make their space more accessible. We were lucky to have so much of their time and collaboration in this project and are thankful for the ability to codesign the website with Bruce.
