Add navbar link choosing for subpage checking

--- a/app/templates/url-input.html
+++ b/app/templates/url-input.html
@@ -13,7 +13,7 @@
     <li>Header hierarchy: We note if the first header on a page is not an h1 or if header levels are skipped.</li>
   </ul>
   <center>
-    <form method="POST">
+    <form method="POST" action="/subpage-selection">
       <label for="url to check">URL to check:</label>
       <input name="url to check" id="url to check" required aria-required="true">
       <input type="submit" value="Submit">
