Revise the About page text

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -7,10 +7,10 @@
 </div>
 <div class="container">
   <p>
-    WAQC is a webapp that will check a website for some basic accessibility violations. Unlike many other accessibility checkers, we are built to be accessible and the report we generate is not technical. We built this for and with our community partner from the Carroll Center for the Blind in the context of a project course at Olin College of Engineering.
+    The Web Accessibility Quick Checker, or WAQC, is a webapp that will check a website for some basic accessibility violations. Unlike many other accessibility checkers, WAQC itself is built to be as accessible as possible. The interface is simple, the output is not meant solely for individuals with technical backgrounds, and all parts of this tool are accessible to users with screen readers. We built this for and with our community partner, the Carroll Center for the Blind, in the context of a project for the Technology, Accessibility, and Design course at Olin College of Engineering.
   </p>
   <p>
-    We were motivated to learn about web accessibility and participate in making the internet more accessible for multiple reasons. For one, it is important to know how the world around us treats everyone, including the digital world. This allows us to move forward to create an equal platform for everyone. Secondly, as engineers we spend a lot of time online and potentially will have our work presented in digital space. We wanted to learn how to make our future work more accessible to others. Thirdly, we wanted to create a tool that our community partner could use to assess more websites and broaden his reach. This way, we can hopefully amplify his abilities by allowing him to do more in less time.
+    WAQC's purpose is two-fold. Primarily, it serves as a digital tool to improve the Carroll Center's ability to more quickly and automatically inspect the accessibility of a defined set of elements on any website. This tool will enable our Community Partner to reach a larger volume of potential clients more rapidly and cost-effectively. WAQC's second, but perhaps equally important purpose, is to act as a medium through which we, as apiring engineers, can learn more about the accessibility of technology in the world around us and perhaps serve as a positive example for teaching others about the importance of accessibility.
   </p>
   <p>
     If you want to help WAQC grow, <a href="https://github.com/tad-web/waqc">check out our source code on Github</a>!
@@ -21,7 +21,7 @@
     </center>
   </div>
   <p>
-    We worked closely with Bruce to generate ideas, choose valuable potential violations to check for, and make sure our tool is accessible as we built it. We met weekly and then nearly every other day to run through the current state of the tool and make decisions together for next steps. Because we so closely codesigned this tool with Bruce, many of our decisions are tailored to his specific use case, but we hope WAQC can be useful to others as well. This whole process was completed from March to May of 2018.
+  We worked closely with our community partner, <a href="https://carroll.org/">the Carroll Center for the Blind</a>, to generate ideas, select potentially significant accessibility barriers to check for, and make sure our tool is accessible as we built it. We met weekly and then nearly every other day to run through the current state of the tool and make decisions together for next steps. Because we so closely co-designed this tool with the Carroll Center, many of our decisions are tailored to their specific use case, but we hope WAQC can be useful to others as well. This entirety of this process, from design to implementation, was completed from March to May of 2018.
   </p>
   <p>
     We created a web application in python using primarily Flask and Jinja2 and hosted it with Heroku. Please <a href="https://github.com/tad-web/waqc">check out our source code on Github</a> for more detailed implementation information and instructions to install and run our project locally.
@@ -56,10 +56,10 @@
 
   <h3>Partners</h3>
   <p>
-    For this project, we partnered with Bruce Howell, who is the Accessibility Services Manager for the Carroll Center for the Blind’s Web Accessibility business. He provides evaluations for a company based on their website’s accessibility to people with vision loss. The Carroll Center is passionate about, among other things, providing computer training for all levels, whether it be basic, intensive, for a job or for college, as well as helping companies with websites make their space more accessible. We were lucky to have so much of their time and collaboration in this project and are thankful for the ability to codesign the website with Bruce.
+  Throughout this project, Bruce Howell, the Carroll Center's <a href="https://carroll.org/accessibility-services/">Accessibility Servies</a> Manager, served as our liaison to the Carroll Center. The Carroll Center evaluates websites and mobile applications for their clients to help improve accessibility for persons who are blind or otherwise disabled. Since The Carroll Center, as a blindness rehabilitation agency, teaches individuals who are blind or visually impaired to use assistive technologies, they are also commited to helping those who design and build websites and mobile applications to make them more accessible. We were lucky to have so much of the Carroll Center's time and collaboration in this project and are thankful for the ability to co-design the website with them.
   </p>
   <p>
-    This website is the project for our course Technology, Accessibility, Design at Olin College in the Spring 2018 semester. We were supported by our Professors, Caitrin Lynch and Paul Ruvolo. Caitrin is an anthropologist that teaches various humanities courses at Olin College. Paul is a computer scientists who teaches various computer engineering and robotics courses at Olin College. To learn more, see <a href="http://www.olin.edu/faculty/profile/caitrin-lynch/">Caitrin’s biography</a> or <a href="http://www.olin.edu/faculty/profile/paul-ruvolo">Paul’s biography</a> on the Olin website. Together, they collaborated on this course, Technology, Accessibility, Design, first offered in Spring 2018.
+    This accessibility checker tool is a project for our course Technology, Accessibility, Design at Olin College of Engineering in the Spring 2018 semester. We were supported by our two professors, <a href="http://www.olin.edu/faculty/profile/caitrin-lynch/">Caitrin Lynch</a> and <a href="http://www.olin.edu/faculty/profile/paul-ruvolo">Paul Ruvolo</a>. Together, they collaborated on this course, Technology, Accessibility, Design, first offered in Spring 2018.
   </p>
 
 </div>
