made some changes from feedback

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -21,10 +21,10 @@
     </center>
   </div>
   <p>
-  We worked closely with our community partner, <a href="https://carroll.org/">the Carroll Center for the Blind</a>, to generate ideas, select potentially significant accessibility barriers to check for, and make sure our tool is accessible as we built it. We met weekly and then nearly every other day to run through the current state of the tool and make decisions together for next steps. Because we so closely co-designed this tool with the Carroll Center, many of our decisions are tailored to their specific use case, but we hope WAQC can be useful to others as well. This entirety of this process, from design to implementation, was completed from March to May of 2018.
+  We worked closely with our community partner, <a href="https://carroll.org/">the Carroll Center for the Blind</a>, to generate ideas, select some appropriate accessibility barriers for our tool to check, and make sure our tool is accessible as we built it. We met weekly and then nearly every other day to run through the current state of the tool and make decisions together for next steps. Because we so closely co-designed this tool with the Carroll Center, many of our decisions are tailored to their specific use case, but we hope WAQC can be useful to others as well. This entire process, from design to implementation, was completed from March to May of 2018.
   </p>
   <p>
-    We created a web application in python using primarily Flask and Jinja2 and hosted it with Heroku. Please <a href="https://github.com/tad-web/waqc">check out our source code on Github</a> for more detailed implementation information and instructions to install and run our project locally.
+    We created a web application in python using primarily Flask and Jinja2, and hosted it with Heroku. Please <a href="https://github.com/tad-web/waqc">check out our source code on Github</a> for more detailed implementation information and instructions to install and run our project locally.
   </p>
   <div class="docs-header">
     <center>
@@ -56,7 +56,7 @@
 
   <h3>Partners</h3>
   <p>
-  Throughout this project, Bruce Howell, the Carroll Center's <a href="https://carroll.org/accessibility-services/">Accessibility Servies</a> Manager, served as our liaison to the Carroll Center. The Carroll Center evaluates websites and mobile applications for their clients to help improve accessibility for persons who are blind or otherwise disabled. Since The Carroll Center, as a blindness rehabilitation agency, teaches individuals who are blind or visually impaired to use assistive technologies, they are also commited to helping those who design and build websites and mobile applications to make them more accessible. We were lucky to have so much of the Carroll Center's time and collaboration in this project and are thankful for the ability to co-design the website with them.
+  Throughout this project, Bruce Howell, the <a href="https://carroll.org/accessibility-services/">Carroll Center's Accessibility Services</a> Manager, served as our liaison to the Carroll Center. The Carroll Center evaluates websites and mobile applications for their clients to help improve accessibility for persons who are blind or otherwise disabled. Since The Carroll Center, as a blindness rehabilitation agency, teaches individuals who are blind or visually impaired to use assistive technologies, they are also commited to helping those who design and build websites and mobile applications to make them more accessible. We were lucky to have so much of the Carroll Center's time and collaboration in this project and are thankful for the ability to co-design the website with them.
   </p>
   <p>
     This accessibility checker tool is a project for our course Technology, Accessibility, Design at Olin College of Engineering in the Spring 2018 semester. We were supported by our two professors, <a href="http://www.olin.edu/faculty/profile/caitrin-lynch/">Caitrin Lynch</a> and <a href="http://www.olin.edu/faculty/profile/paul-ruvolo">Paul Ruvolo</a>. Together, they collaborated on this course, Technology, Accessibility, Design, first offered in Spring 2018.
