checks for labels in forms

--- a/app/templates/url-input.html
+++ b/app/templates/url-input.html
@@ -11,6 +11,7 @@
     <li>Link labels: We note if a link label matches an example poor link text from our <a href="https://github.com/tad-web/waqc/blob/master/config/bad_link_labels.txt">list of bad link labels</a>.</li>
     <li>Image alt text: We note if an image has no alt text or if the alt text contains a file extension.</li>
     <li>Header hierarchy: We note if the first header on a page is not an h1 or if header levels are skipped.</li>
+    <li>Form labels: We note if an editable form in a field is unlabeled.</li>
   </ul>
   <center>
     <form method="POST" action="/subpage-selection">
