--- a/app/templates/url-input.html
+++ b/app/templates/url-input.html
@@ -12,6 +12,7 @@
     <li>Image alt text: We note if an image has no alt text or if the alt text contains a file extension.</li>
     <li>Header hierarchy: We note if the first header on a page is not an h1 or if header levels are skipped.</li>
     <li>Form labels: We note if an editable form in a field is unlabeled.</li>
+    <li>Skip link check: We note if there are links labelled as "Skip to Navigation" or similar, which allows a screenreader to skip to main content of a site. </li>
   </ul>
   <center>
     <form method="POST" action="/subpage-selection">
