--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css')}}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/skeleton.css')}}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css')}}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/showHide.css')}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/actuallyCustom.css')}}">
   </head>
   <body>
     <nav class="navbar">
