--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -34,19 +34,19 @@
   <h3>Developers</h3>
   <div>
     <div class="one-third column">
-      <img class="u-full-width" src="{{ url_for('static', filename='images/ginger.png') }}" alt="Future Lisa's face, currently a gingerbread man">
+      <img class="u-full-width" src="{{ url_for('static', filename='images/lisa-bio.png') }}" alt="Portrait of Lisa">
       <p>
         Lisa studies electrical engineering at Olin College (Class 2018). This may be the last time Lisa touches front end software for a long time, as she normally hides in radio frequencies.
       </p>
     </div>
     <div class="one-third column">
-      <img class="u-full-width" src="{{ url_for('static', filename='images/ginger.png') }}" alt="Future Shane's face, currently a gingerbread man">
+      <img class="u-full-width" src="{{ url_for('static', filename='images/shane.jpeg') }}" alt="Portrait of Shane">
       <p>
         Shane is a robotics engineer in Olin College’s class of 2018. He likes the internet and thinks everyone should have access to the things they like.
       </p>
     </div>
     <div class="one-third column">
-      <img class="u-full-width" src="{{ url_for('static', filename='images/ginger.png') }}" alt="Future Louise's face, currently a gingerbread man">
+      <img class="u-full-width" src="{{ url_for('static', filename='images/louise.jpg') }}" alt="Portrait of Louise">
     </div>
     <p>
       Louise is a junior studying human-centered software engineering. They learned a lot about (accessible) web development in this project and will probably never touch Jinja templates again.
